# twinshim

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-THIRD-PARTY.md  README.md  TwinShim-windows-mingw.code-workspace  hklm-wrapper-native.code-workspace  vcpkg.json
config/: wrapper_config.h
scripts/: build-macos-hklmreg.sh  build-windows-msvc-x86.cmd
src/common/: arg_quote.cpp  arg_quote.h  local_registry_store.cpp  local_registry_store.h  path_util.cpp  path_util.h  utf8.cpp  utf8.h  win32_error.cpp  win32_error.h
src/dgvoodoo_addon/: addon_main.cpp  addon_namespace_tail.inl  addon_util.inl  d3d12_observer_private_methods.inl  d3d12_observer_private_state.inl  d3d12_observer_public.inl
src/hklmreg/: main.cpp  reg_file.cpp  reg_file.h
src/shim/: d3d9_surface_doubling.cpp  d3d9_surface_doubling.h  d3d9_surface_scaler.cpp  d3d9_surface_scaler.h  ddraw_surface_doubling.cpp  ddraw_surface_doubling.h  ddraw_surface_scaler.cpp  ddraw_surface_scaler.h  dllmain.cpp  minhook_runtime.cpp  minhook_runtime.h  mouse_scale_hooks.cpp  registry_hooks.cpp  registry_hooks.h  registry_hooks_hooks_ansi.inl  registry_hooks_hooks_core.inl  registry_hooks_hooks_legacy.inl  registry_hooks_trace.cpp  registry_hooks_trace.h  registry_hooks_utils.cpp  registry_hooks_utils.h  surface_scale_config.cpp  surface_scale_config.h  window_scale_registry.cpp  window_scale_registry.h
src/wrapper/: ddraw_devices.cpp  ddraw_devices.h  main.cpp  process_inject.cpp  process_inject.h
tests/: CMakeLists.txt  test_arg_quote.cpp  test_local_registry_store.cpp  test_path_util.cpp  test_reg_file_import_export.cpp  test_tmp.h  test_utf8.cpp  test_wrapper_workflow.cpp  workflow_probe_main.cpp
